--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,11 @@
   "name": "sewa-backend",
   "version": "1.0.0",
   "description": "SEWA Volunteer Management System Backend",
-  "main": "src/app.ts",
+  "main": "dist/app.js",
+  "type": "module",
   "scripts": {
-    "start": "node dist/app.js",
-    "dev": "nodemon --exec ts-node src/app.ts",
+    "start": "node --experimental-specifier-resolution=node dist/app.js",
+    "dev": "nodemon",
     "build": "tsc",
     "seed": "node src/scripts/seed.js"
   },
@@ -30,7 +31,7 @@
     "@types/qrcode": "^1.5.0",
     "nodemon": "^2.0.22",
     "prisma": "^5.0.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.4"
   }
 }
